[gd_scene load_steps=3 format=2]

[ext_resource path="res://juego/cuadros/iconoEspadaPequeno.png" type="Texture" id=1]
[ext_resource path="res://juego/cuadros/CuadroAccion.gd" type="Script" id=2]

[node name="CuadroAccion" type="Node2D"]
script = ExtResource( 2 )

[node name="SpriteEspada" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="SpriteBomba" type="Sprite" parent="."]
visible = false
modulate = Color( 0.207843, 0.0196078, 0.0196078, 1 )
texture = ExtResource( 1 )
